<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myproject.mobistore.MainActivity" >

    <TextView
        android:id="@+id/textRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:text="@string/login_prompt"
        android:textColor="#820000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textRes"
        
        android:layout_marginTop="34dp"
        android:text="@string/user_entry" />


    <EditText
        android:id="@+id/disptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="text" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/disptext"
        android:layout_alignStart="@+id/disptext"
        android:layout_centerVertical="true"
        android:text="@string/pass_entry" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="textPassword" />

        

    <TextView
        android:id="@+id/afail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="15dp"
        
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#B20000" />
    
    <Button
        android:id="@+id/button1"
        
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/afail"
        android:layout_marginTop="5dp"
        android:onClick="authenticator"
        android:text="@string/login_button"
        style="@style/button_text"
        android:background="@drawable/red_button"
         />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button1"
        android:onClick="popper"
        android:layout_alignParentBottom="true"
        android:text="@string/signup_button"
        android:textSize="25sp"
        style="@style/button_text"
        android:background="@drawable/blue_button" />

</RelativeLayout>
